bk_ida/gccida/g1/general_operand
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/general_operand/src/recog.c:1379:31: error: must use 'enum' tag to refer to type 'machine_mode'
int  general_operand( rtx op, machine_mode mode) 
                              ^
                              enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/general_operand/src/recog.c:1382:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/general_operand/src/recog.c:1403:64: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( *( ( _BYTE *)op + 2) || v3 == VOIDmode || ( result = 0, ( mode_class_0[v3] & 0xFFFFFFFD) == 1) ) 
                                                               ^~~~~~~~~~~~
                                                               mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/general_operand/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/general_operand/src/recog.c:1420:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v14.rtwint = ( __int64)op->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/general_operand/src/recog.c:1429:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( op[1] ) 
^    ~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/general_operand/src/recog.c:1433:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[v12] == MODE_FLOAT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/general_operand/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/general_operand/src/recog.c:1460:31: error: use of undeclared identifier 'machine_mode'
v17 = legitimate_address_p( ( machine_mode)*( ( unsigned __int8 *)rtx + 2), v16, 0); 
                              ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/general_operand/src/obj/recog.o] Error 1
